# hermes-mcp-s-grok-search

./: .gitignore  README.md  pyproject.toml
examples/: hermes_config.yaml
scripts/: probe_cpa_responses_shapes.py
src/hermes_mcps_grok_search/: __init__.py  client.py  parser.py  tools.py  validation.py
tests/: test_module.py
